# pflegebedarf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  build.sh  crossbuild.sh  deploy.sh  elm.json  package-lock.json  package.json  run.sh  versenden.ini
api/: Cargo.toml  bestellungen.php  bestellungen_menge.php  pflegemittel.php  pflegemittel_bestand.php
api/src/: cgi.rs  datenbank.rs  main.rs  modell.rs  versenden.rs
lib/: api.php  datenbank.php  schema.php  versenden.php
schema/: schema.php
src/: Api.elm  NeueBestellung.elm  Pflegemittel.elm  Ui.elm  datenbank.rs  main.rs  modell.rs  versenden.rs
ui/: Api.elm  NeueBestellung.elm  Pflegemittel.elm  PflegemittelBestand.elm  Ui.elm  build.sh  elm-package.json  elm.json  format.sh  minify.sh  package-lock.json  package.json
