[package]
name = "pflegebedarf"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/pflegebedarf"
edition = "2018"

[features]
default = ["build-ui"]
build-ui = []

[dependencies]
tokio = "1.0"
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
url = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lettre = "0.9"
lettre_email = "0.9"
rusqlite = "0.24"
chrono = "0.4"

[build-dependencies]
flate2 = "1.0"
rayon = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
