[package]
name = "pflegebedarf"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/pflegebedarf"
edition = "2021"

[features]
default = ["build-ui"]
build-ui = []

[dependencies]
tokio = "1.0"
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
url = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
rusqlite = "0.28"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"
