[package]
name = "pflegebedarf"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/pflegebedarf"
edition = "2021"

[features]
default = ["build-ui"]
build-ui = []

[dependencies]
tokio = "1.0"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
url = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
rusqlite = "0.32"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"
