[package]
name = "api"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]

[dependencies]
time = "0.1"
url = "1.7"
rusqlite = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-ini = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
